manifests/api-designer/base/api-designer-poc/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: api-designer
    component: api-designer-poc
  name: api-designer-poc
spec:
  replicas: 1
  selector:
    component: api-designer-poc
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        component: api-designer-poc
      name: api-designer-poc
    spec:
      containers:
      - name: api-designer-poc
        image: api-designer-poc:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - api-designer-poc
      from:
        kind: ImageStreamTag
        name: api-designer-poc:latest
    type: ImageChange
