manifests/api-designer/base/api-designer-poc/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api-designer
    component: api-designer-poc
  name: api-designer-poc
spec:
  ports:
  - name: 8080-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    component: api-designer-poc
