manifests/api-designer/base/api-designer-poc/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: api-designer
    component: api-designer-poc
  name: api-designer-poc
spec:
  port:
    targetPort: 8080-http
  tls:
    termination: edge
  to:
    kind: Service
    name: api-designer-poc
    weight: 100
  wildcardPolicy: None
